<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FzDestroyer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_logowanie">Logowanie</string>
    <string name="podaj_email">Podaj swój adres e-mail do facebooka:</string>
    <string name="podaj_haslo">Hasło:</string>
    <string name="przycisk_logowania">Zaloguj</string>
    <string name="title_activity_czat">Czat</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">1234567890</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wyslij_wiadomosc">Wyślij</string>
    <string name="app_id">1426928514282008</string>
    <string name="title_activity_menu">Menu</string>
    <string name="czat">Czat</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="pomoc">Pomoc</string>
    <string name="info">Info</string>
    <string name="title_activity_ustawienia">Ustawienia</string>
    <string name="opis">Opis:</string>
    <string name="orientacja">Orientacja:</string>
    <string name="dzien_urodzenia">Data urodzenia:</string>
    <string name="plec">Płeć:</string>
    <string name="zdjecie">Zdjęcie:</string>
    <string name="miejscowosc">Miejscowość:</string>
    <string name="zapisz_zmiany">Zapisz zmiany</string>
    <string name="data_urodzenia">Data urodzenia:</string>
    <string name="zasieg">Zasięg:</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="title_activity_infos">InfosActivity</string>
    <string-array name="tutajinformacje">
        <item>Aplikacja do chatowania</item>
        <item>Wersja 0.0.0.1</item>
        <item>Zapełnianie</item>
        <item>Listy</item>
        <item>w</item>
        <item>celach</item>
        <item>chyba</item>
        <item>testowych</item>
        <item>ale</item>
        <item>to</item>
        <item>bez</item>
        <item>sensu</item>
        <item>.</item>
    </string-array>
    <string-array name="tutajpomusz">
        <item>Pomocy nie ma</item>
        <item>Bo i po co</item>
        <item>Hahahhahahahah</item>
        <item>Umrzyj!</item>
    </string-array>
</resources>
